# codex

./: .gitignore
codex-rs/: Cargo.toml
codex-rs/analytics/src/: analytics_client_tests.rs  client.rs  facts.rs  reducer.rs
codex-rs/app-server/: README.md
codex-rs/app-server-client/src/: lib.rs  remote.rs
codex-rs/app-server-protocol/src/: lib.rs
codex-rs/app-server-test-client/src/: lib.rs
codex-rs/app-server/src/: message_processor_tracing_tests.rs  request_processors.rs
codex-rs/apps/: BUILD.bazel  Cargo.toml
codex-rs/apps/src/: http.rs  lib.rs  lib_tests.rs
codex-rs/cli/src/: doctor.rs  exec_server_telemetry.rs  main.rs  mcp_cmd.rs  plugin_cmd.rs
codex-rs/cli/tests/: exec_server.rs
codex-rs/codex-api/src/: common.rs
codex-rs/codex-client/src/: chatgpt_cloudflare_cookies.rs
codex-rs/codex-mcp/: Cargo.toml
codex-rs/codex-mcp/src/: codex_apps.rs  connection_manager.rs  connection_manager_tests.rs  lib.rs  rmcp_client.rs  server.rs  server_tests.rs  tools.rs
codex-rs/connectors/src/: metadata.rs
codex-rs/context-fragments/: Cargo.toml
codex-rs/context-fragments/src/: lib.rs  world_state.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core-api/src/: lib.rs
codex-rs/core-plugins/: Cargo.toml
codex-rs/core-plugins/src/: lib.rs  loader.rs  manager.rs  manager_tests.rs  marketplace.rs  marketplace_tests.rs  startup_sync.rs
codex-rs/core-skills/src/: lib.rs  runtime_snapshot.rs
codex-rs/core/src/: client.rs  codex_delegate.rs  codex_thread.rs  compact.rs  compact_remote_v2.rs  compact_tests.rs  connectors.rs  exec_policy_tests.rs  mcp.rs  mcp_tool_call.rs  mcp_tool_call_tests.rs  personality_migration_tests.rs  thread_manager.rs  thread_manager_tests.rs
codex-rs/core/tests/: responses_headers.rs
codex-rs/exec-server/: Cargo.toml
codex-rs/exec-server/src/: lib.rs
codex-rs/exec-server/tests/: chatgpt_cloudflare_affinity.rs
codex-rs/exec/src/: lib.rs
codex-rs/ext/executor-plugins/: BUILD.bazel  Cargo.toml
codex-rs/ext/executor-plugins/src/: lib.rs  manager.rs  runtime.rs
(+198 files in other folders)
