[package]
name = "codex-apps"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, default-features = false, features = ["http1", "tokio"] }
base64 = { workspace = true }
codex-config = { workspace = true }
codex-connectors = { workspace = true }
codex-mcp = { workspace = true }
codex-rmcp-client = { workspace = true }
codex-utils-string = { workspace = true }
constant_time_eq = { workspace = true }
rand = { workspace = true }
rmcp = { workspace = true, default-features = false, features = [
    "client",
    "server",
    "transport-async-rw",
    "transport-streamable-http-server",
] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-channel = { workspace = true }
codex-exec-server = { workspace = true }
codex-protocol = { workspace = true }
futures = { workspace = true }
pretty_assertions = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread", "sync"] }

[lib]
doctest = false
