[package]
edition.workspace = true
license.workspace = true
name = "codex-executor-plugin-extension"
version.workspace = true

[lib]
name = "codex_executor_plugin_extension"
path = "src/lib.rs"
doctest = false
test = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-config = { workspace = true }
codex-connectors = { workspace = true }
codex-core-plugins = { workspace = true }
codex-exec-server = { workspace = true }
codex-mcp = { workspace = true }
codex-plugin = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-path-uri = { workspace = true }
tracing = { workspace = true }
